--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,16 @@
-* {
+body {
   background-color: #ff91a4;
+  width: 1200px;
 }
 h1{
   font-size: 72px;
   color: #721817;
 }
 h2{
-  border: 64px, solid, purple;
+  font-size: 55px;
   color:#721817;
+  text-align: center;
+  padding: 15px 0px;
 }
 h3{
   font-size: 48px;
@@ -15,45 +18,126 @@ h3{
 }
 
 
-/* Table Data Format */
-tr {  
-  color:purple;
-  background: peachpuff;
-  text-align: center;
-  box-sizing: border-box;
-}
-table {
-  border-collapse: collapse;
-}
-table, th, td {
-  border: 5px solid indianred;
-}
+
+
 
 header img{  
   float: left;
-  padding: 10px;
+  padding: 10px;  
 }
 header h1 {
   display: inline-block;
-  padding: 65px 10px 65px 10px;
+  padding: 65px 10px 65px 60px;
 }
+/* Quick Bar */
 #quick-bar{  
   margin: 10px;
-  border: 2px solid purple;
+  border: 2px solid indianred;
+  /* display: inline-block; */
 }
-#quick-bar img{
-  display: inline-block;
-  width: 400px;
+
+#contact-info{
+  display: inline-block;  
+  padding: 0px;
 }
 #contact-info ul{
-  display: inline-block;
-  width: 300px;
-  padding: 20px;
-  border: 2px solid black;
+  float: left;
+  margin: 10px 10px;
 }
-#store-hours .sh-txt{
-  display: inline-block;
-  border: 2px solid black;
+#contact-info li{
+  /* display: inline-block; */
+  font-size: 25px;
+  width: 300px;  
 
-  width: 100px;
+}
+.contact-head { /*Not Working*/
+  color: #721817;
+}
+#quick-bar img{
+  width: 400px;
+  padding: 0px 65px;
+}
+
+#store-hours{
+  float: right;
+  margin-top: 10px;
+  /* border: 2px solid black; */
+  width: 300px;  
+}
+
+/* We are international section */
+/* #international-section{
+  display: inline-block;
+} */
+#international-section h2{
+text-align: center;
+/* border: 2px solid black; */
+}
+#international-section h4{
+  border: 1px solid #721817;
+}
+.class1 {
+  padding: 0px 33px;
+  float: left;
+  border: 2px solid #721817;
+}
+.class1 h4{
+  
+  border: 12px solid #ff91a4;  /*Not working*/
+  text-align: center;
+  background-color: #721817;
+  font-size: 24px;
+  color: #b5a886;
+}
+.class1 li{
+  padding: 2px 10px;
+}
+#checksales {
+  
+  font-size: 24px;
+  text-align: center;
+  text-decoration: none;
+}
+
+#meetpat h2{
+  text-align: center;
+  padding:10px 0px;
+}
+
+#meetpat img{
+  float:left;
+  padding-left: 10px;
+  border: 2px solid#721817;
+}
+
+#meetpat p{
+  /* border: 2px solid#721817; */
+  display: inline-block;
+  padding: 15px;
+  margin: 80px 2px;  
+  font-size: 24px;  
+  word-wrap: break-word ;
+  width: 300px;
+}
+#merchsection h2{
+  padding: 10px 0px;
+}
+#merchsection p {
+ 
+  display: inline-block;
+  text-align: left;
+  font-size: 24px;
+  width: 480px;
+  padding: 15px 100px 15px 280px;
+}
+#merchsection img {
+  float: right;
+  padding: 0px 21px;  
+}
+#themerch p {
+  padding: 20px;
+  font-size: 24px;
+}
+#middleimg{
+  padding: 20px 34px 0px 34px;
 }
