--- a/css/style.css
+++ b/css/style.css
@@ -7,58 +7,66 @@ img {
 }
 h1{
   font-family: 'Pacifico', cursive;
-  font-size: 94px;
+  font-size: 91px;
   color: #721817;
   text-shadow: 9px 7px 5px #a80000;
 }
 h2{
+  font-family: 'Permanent Marker', cursive;
   font-size: 55px;
-  color:#721817;
+  color:#8a2221;
   text-align: center;
   padding: 15px 0px;
   border: 2px solid #721817;
+  text-shadow: 9px 7px 5px #c36e6e;
   
   background-color:#B5A886;  
 }
 h3{
   font-size: 48px;
   color: #721817;
+  text-align: center;
+}
+
+h4 {
+  font-size: 24px;
+    text-align: center;
+}
+p, li{
+  font-family: Georgia, Times, serif;
+  font-size: 24px;
+}
+
+.sepContact {
+  padding: 4px 0px;  
 }
 header{
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-#mainH2{
-  border: red solid 1px ;  
-  
-}
-
-
-
-
-header img{  
-  float: left;
-  margin: 10px;  
+  border: red solid 1px ;
 }
 
 /* Quick Bar */
 #quick-bar{  
-  margin: 10px;
+  display: flex;
+  justify-content:space-between;    
+  align-items: center;
   border: 2px solid indianred;
-  /* display: inline-block; */
+  
 }
 
 #contact-info{
   display: inline-block;  
-  padding: 0px;
+  margin: 10px;
+
 }
 #contact-info ul{
   float: left;
   margin: 10px 10px;
 }
 #contact-info li{
-  /* display: inline-block; */
+  padding: 2px;
   font-size: 25px;
   width: 300px;  
 
@@ -66,32 +74,38 @@ header img{
 .contact-head { /*Not Working*/
   color: #721817;
 }
-#quick-bar img{
-  width: 400px;
-  padding: 0px 65px;
-  border: none;
+ #quick-bar img{
+  width: 400px;  
+  border: none; 
 }
 
 #store-hours{
-  float: right;
-  margin-top: 10px;
+   
   /* border: 2px solid black; */
   width: 300px;  
 }
 
 /* We are international section */
-/* #international-section{
-  display: inline-block;
-} */
+#international-section{
+  padding: 10px 0px;
+}
+#internationalLocations{
+  display: flex;
+  justify-content:space-between;    
+  align-items: center;
+  padding: 10px 0px;
+}
+
 #international-section h2{
 text-align: center;
-/* border: 2px solid black; */
+
 }
 #international-section h4{
   border: 1px solid #721817;
 }
 .class1 {
-  padding: 0px 33px;
+  font-size:18px;
+  padding: 0px 20px;
   float: left;
   border: 2px solid #721817;
 }
@@ -100,11 +114,12 @@ text-align: center;
   border: 12px solid #ff91a4;  /*Not working*/
   text-align: center;
   background-color: #721817;
-  font-size: 24px;
+  
   color: #b5a886;
 }
 .class1 li{
   padding: 2px 10px;
+  font-size: 16px;
 }
 #checksales {
   
@@ -113,54 +128,125 @@ text-align: center;
   text-decoration: none;
 }
 
-#meetpat h2{
-  text-align: center;
-  padding:10px 0px;
+
+#about-pat {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 0px;
+}
+
+#meet-pat-header{
+  padding: 10px 0px;
+}
+#meetpat p{
+   
+  padding: 0px 110px 0px 0px;
+  width: 360px;
 }
 
 #meetpat img{
-  float:left;
-  padding-left: 8px;
-  /* border: 2px solid#721817; */
+  width: 620px;
 }
 
-#meetpat p{
-  /* border: 2px solid#721817; */
-  display: inline-block;
-  padding: 15px;
-  margin: 80px 2px;  
-  font-size: 24px;  
-  word-wrap: break-word ;
-  width: 300px;
+/* Merchandise Section */
+#intlHeader{
+  padding: 10px 0px;
 }
-#merchsection h2{
-  margin: 10px 0px;
+
+
+#salmon-question{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 0px;
 }
-#merchsection p {
- 
-  display: inline-block;
-  text-align: left;
-  font-size: 24px;
-  width: 480px;
-  padding: 15px 100px 15px 280px;
+#salmon-question p{
+  
+  padding: 0px 0px 0px 132px;
+  width: 500px;
 }
-#merchsection img {
-  float: right;
-  margin: 0px 21px;  
+#merch-items{
+  display: flex;
+  justify-content:space-between;    
+  align-items: center;
+  padding: 10px 0px;
 }
-#themerch p {
-  padding: 20px;
-  font-size: 24px;
+#themerch p{
+  padding: 10px 20px;
 }
-#themerch h2 {
-  margin: 20px;
-}
-#middleimg{
-  margin: 20px 30px 0px 30px;
+
+footer{
+  background-color: #721817 ;
+  margin: 20px 0px;
+  padding: 30px 0px;
+  text-align: center;    
 }
 footer h3{
-  background-color: #721817;
+  font-size: 22px;
+  color:#b5a886; 
+}
+
+/* Sales Data Page */
+table {
+  width: 100%;
+  border: 2px solid azure;
+}
+
+th, td {
+  
+  height: 22px;
   text-align: center;
-  color: #ff91a4;
-    
+  border: 1px solid azure;
+
+  
+}
+th {
+  font-size:24px;
+  word-wrap: normal;
+}
+td{
+  font-size: 20px;
+}
+tr:nth-child(even) {
+  background-color: #b5a886;
+}
+td:hover {
+  background-color: #f8f6f2;  
+}
+#header-row{
+  background-color: #8a2221;
+}
+footer{
+  padding: 10px;
+}
+footer h3{
+  font-size: 24px;
+  padding:0px;
+}
+
+form{
+  color:  #721817;
+}
+#storeLocationEntry{
+  width: 130px;
+}
+#minCustID, #maxCustID, #avgCookieSales{
+  width: 30px;
+}
+
+#subButton{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+input[type=submit] {
+  margin: 10px;
+  padding: 10px;
+  background-color: #c2716f;
+  color: white;
+  width: 220px;
+  /* outline-style: outset; */
+  border: 3px solid  #721817;
+
 }
